force-app/main/default/objects/Dan360_Factura__c/Dan360_Factura__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene los documentos de cuentas corrientes de los clientes que se relacionan a un pedido.</description>
    <label>Factura</label>
    <nameField>
        <displayFormat>Fact-{0000}</displayFormat>
        <label>Nombre de Documento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>