force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que hace referencia al cliente.</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Documentos_de_Cuentas_Corrientes</relationshipName>
    <type>Lookup</type>
</CustomField>