force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CodigoCliente__c</fullName>
    <formula>Dan360_Cliente__r.Id_SAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Cliente</label>
    <type>Text</type>
</CustomField>