force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Comprobante__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Comprobante__c</fullName>
    <label>Comprobante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>