force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Delivery__c</fullName>
    <formula>Dan360_Remito__r.Dan360_Delivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery</label>
    <type>Text</type>
</CustomField>