force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_DescripcionCondicionPago__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DescripcionCondicionPago__c</fullName>
    <label>Descripción condición de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>