force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_FechaDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_FechaDocumento__c</fullName>
    <description>Indica la fecha en que se genero el documento de la cuenta corriente del cliente.</description>
    <label>Fecha de Documento</label>
    <type>Date</type>
</CustomField>