force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_ImporteDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ImporteDocumento__c</fullName>
    <description>Indica el importe registrado en el documento de la cuenta corriente del cliente.</description>
    <label>Importe Documento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>