force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_ImporteIVATotalInscripto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ImporteIVATotalInscripto__c</fullName>
    <label>Importe IVA total inscripto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>