force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_ImporteTotalNetoGravado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ImporteTotalNetoGravado__c</fullName>
    <label>Importe total neto gravado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>