force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_NroComprobante__c.field-meta.xml
<CustomField>
    <fullName>Dan360_NroComprobante__c</fullName>
    <label>NroComprobante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>