force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_NroPedidoWebSalesforce__c.field-meta.xml
<CustomField>
    <fullName>Dan360_NroPedidoWebSalesforce__c</fullName>
    <formula>Dan360_Pedido__r.Dan360_Id_Externo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nro Pedido Web Salesforce</label>
    <type>Text</type>
</CustomField>