force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_NumeroDeRemito__c.field-meta.xml
<CustomField>
    <fullName>Dan360_NumeroDeRemito__c</fullName>
    <formula>Dan360_Remito__r.Dan360_Remito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de remito</label>
    <type>Text</type>
</CustomField>