force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_OrdenDeCompra__c.field-meta.xml
<CustomField>
    <fullName>Dan360_OrdenDeCompra__c</fullName>
    <formula>Dan360_Pedido__r.Orden_de_compra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orden de compra</label>
    <type>Text</type>
</CustomField>