force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Pedido__c</fullName>
    <description>Pedido al cual se relaciona la factura.</description>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Facturas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>