force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Remito__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Remito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Remito al cual está relacionada una factura.</description>
    <label>Remito</label>
    <referenceTo>Dan360_Remito__c</referenceTo>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>