force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Saldo__c</fullName>
    <description>Indica el saldo de la transacción relacionada al documento de la cuenta corriente.</description>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>