force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_SalesOrganizationId__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesOrganizationId__c</fullName>
    <label>Sales Organization Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>