force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Semaforo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Semaforo__c</fullName>
    <formula>IF(
Dan360_Saldo__c = 0 ,&quot;🟢&quot;,
IF(
AND( Dan360_Saldo__c &gt; 0, TODAY() &gt; Dan360_Vencimiento__c ), &quot;🔴&quot;,
IF(
AND( Dan360_Saldo__c &gt; 0, TODAY() &lt;= Dan360_Vencimiento__c ), &quot;⚫&quot;
,&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semáforo</label>
    <type>Text</type>
</CustomField>