force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sucursal asociad a la factura.</description>
    <label>Sucursal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>