force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_SucursalCliente__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SucursalCliente__c</fullName>
    <formula>Dan360_Sucursal__r.Id_SAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sucursal Cliente</label>
    <type>Text</type>
</CustomField>