force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_TipoDocumento__c</fullName>
    <label>Tipo de documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>