force-app/main/default/objects/Dan360_Factura__c/fields/Dan360_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Vencimiento__c</fullName>
    <description>Indica la fecha de vencimiento del documento.</description>
    <label>Vencimiento</label>
    <type>Date</type>
</CustomField>