force-app/main/default/objects/Dan360_Factura__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dan360_Pedido__c</columns>
    <columns>Dan360_Cliente__c</columns>
    <columns>Dan360_FechaDocumento__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>