force-app/main/default/objects/Dan360_Factura__c/listViews/Dan360_Facturas.listView-meta.xml
<ListView>
    <fullName>Dan360_Facturas</fullName>
    <columns>NAME</columns>
    <columns>Dan360_Pedido__c</columns>
    <columns>Dan360_Cliente__c</columns>
    <columns>Dan360_FechaDocumento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Facturas</label>
</ListView>